--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,92 @@
-# Python
+# Byte-compiled / cache files
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
-venv/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
 .env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
 
-# Database
-*.sqlite3
+# PyInstaller
+*.manifest
+*.spec
 
-# IDEs
-.vscode/
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# PyCharm
 .idea/
 
-# Node
-node_modules/
+# VS Code
+.vscode/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# pyre type checker
+.pyre/
+
+# SQLAlchemy / Alembic
+migrations/versions/*.pyc
+migrations/versions/__pycache__/
+alembic.ini.bak
+
+# Local databases
+*.db
+*.sqlite3
 
 # Logs
 *.log
+
+# OS specific
+.DS_Store
+Thumbs.db
